# learn_friend

./: .gitignore  README.md
Device-Side/UI/: CMakeLists.txt  chatpage.cpp  chatpage.h  chatpage.ui  knowledgepage.cpp  knowledgepage.h  knowledgepage.ui  knowledgeretrievepage.cpp  knowledgeretrievepage.h  knowledgeretrievepage.ui  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainpage.cpp  mainpage.h  mainpage.ui  pagemanager.cpp  pagemanager.h  promptpage.cpp  promptpage.h  promptpage.ui  propmtpage.cpp  propmtpage.h  propmtpage.ui  resource.qrc  watcherpage.cpp  watcherpage.h  watcherpage.ui
Device-Side/UI/config/: config.cpp  config.h  config.json
Device-Side/UI/network/: httpclient.cpp  httpclient.h
Device-Side/UI/qss/: chat.qss  knowledge.qss  knowledge_retrieved.qss  loginpage.qss  mainpage.qss  prompt.qss  watcher.qss
Device-Side/UI/sdk/components/: qtmaterialavatar.cpp  qtmaterialtabs.cpp
Device-Side/UI/sdk/components/keyboard/: softkeyboard.cpp  softkeyboard.h
model/: train.yaml  yolo_detect.py  yolo_train.py
model/runs/detect/yolov8n.pt_fine/: args.yaml  results.csv
model/runs/detect/yolov8s.pt_fine/: args.yaml  results.csv
model/runs/detect/yolov8s_init/: args.yaml  results.csv
